<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (c) 2022 Silverwolfg11
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>MapTowny</artifactId>
        <groupId>me.silverwolfg11</groupId>
        <version>2.1.0</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>maptowny-pl3xmap-v2</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <jdk.version>17</jdk.version>
    </properties>

    <repositories>
        <repository>
            <id>Modrinth</id>
            <url>https://api.modrinth.com/maven</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>me.silverwolfg11</groupId>
            <artifactId>maptowny-api</artifactId>
            <version>${project.parent.version}</version>
            <scope>provided</scope>
        </dependency>
        <!-- Use Modrinth for Pl3xMap v2 while in alpha release -->
        <!-- Maven API Documentation: https://docs.modrinth.com/docs/tutorials/maven/ -->
        <dependency>
            <groupId>maven.modrinth</groupId>
            <!-- Project ID for Pl3xMap on Modrinth: https://modrinth.com/plugin/pl3xmap -->
            <artifactId>YMXhf1UJ</artifactId>
            <version>1.19.2-319</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>*</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
    </dependencies>

</project>